// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`move-data-type should handle moving non-existent data type 1`] = `
{
  "content": [],
  "isError": true,
  "structuredContent": {
    "operationStatus": "NotFound",
    "status": 404,
    "title": "The data type could not be found",
    "type": "Error",
  },
}
`;

exports[`move-data-type should handle moving to non-existent folder 1`] = `
{
  "content": [],
  "isError": true,
  "structuredContent": {
    "operationStatus": "ParentNotFound",
    "status": 404,
    "title": "The targeted parent for the data type operation was not found.",
    "type": "Error",
  },
}
`;

exports[`move-data-type should move a data type 1`] = `
{
  "content": [
    {
      "text": "",
      "type": "text",
    },
  ],
}
`;
